# cheapfinder

./: .gitignore  LICENSE  README.md  docker-compose.yml
app/: pyproject.toml
app/config/: __init__.py
app/crawler/spiders/: avito.py  dns.py
app/domain/: models.py
